<resources>
    <string name="app_name">Startup Mitra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragmen">Hello Profile fragmet</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="API_KEY">AIzaSyD0Y79UiTb37BscDBhKVbejUTdlx-foL5I</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="feedbk">Any other thing you want us to know ?</string>
    <string name="feedback">Lets us serve you better the next time.</string>
    <string name="title_activity_show_feedback">ShowFeedback</string>
    <string name="string_getting_json_title">getFlightDetails</string>
    <string name="string_getting_json_message">Please Keep Patiece</string>
    <string name="Submit">Submit</string>
    <string name="transport">Transport Services To City</string>
    <string name="parking">Parking</string>
    <string name="lounge">Lounge</string>
    <string name="eat">Eating Area</string>
    <string name="Baggage">Baggage Claim</string>
    <string name="nav">Navigation Ease</string>
    <string name="clean">Airport Cleanliness</string>
    <string name="hospitality">Ground Transportation To/From Airport</string>
    <string name="feedbackTitle">Feedback</string>
    <string name="bag">Availability of Baggage Carts/Trolleys</string>
    <string name="court">COURTESY, HELPFULNESS OF CHECK-IN STAFF</string>
    <string name="waittimes">Waiting Time at Passport/Personal Id Inspection</string>
    <string name="courtsy">Courtesy and helpfulness of Inspection and Security Staff</string>
    <string name="easeFind">Ease of finding your way through the Airport</string>
    <string name="eatRest">Restaurent/Eating Facilities</string>
    <string name="staf">Courtesy and helpfulness of Airport Staff</string>
    <string name="satisfaction">Overall satiffaction with Airport</string>
    <string name="shopping">Shopping Facilities</string>
    <string name="claening">Cleanliness of Airport Terminal</string>
    <string name="aval">Availability of Bank/Atm Facilities/Money Changers</string>
    <string name="Complain">Complain</string>
    <string name="suggestion">Suggestions</string>
    <string name="registerStartup">Register Your Startup</string>
    <string name="writeSuggestion">Enter your Suggestion!</string>
    <string name="writeAppreciation">Write your appreciation comments here</string>
    <string name="aname">Airport Name</string>
    <string name="num">Number</string>
    <string name="eamil">Email ID</string>
    <string name="age">Age</string>
    <string name="FlightNumber">Flight Number</string>
    <string name="nationality">NATIONALITY</string>
    <string name="indain">INDIAN</string>
    <string name="visits">No. of visits in past twelve months</string>
    <string name="onetoseven">1-7 times</string>
    <string name="sevenplus">7+</string>
    <string name="ctype">Complain Type</string>
    <string name="Foregn">FOREGIN</string>
    <string name="name">Name</string>
    <string name="fn">Flight Number</string>
    <string name="feedbackdetail">Feedback Details</string>
    <string name="src">SRC</string>
    <string name="des">DES</string>
    <string name="flight">Flight</string>
    <string name="SU254">SU254</string>
    <string name="gate">gate</string>
    <string name="g">22A</string>
    <string name="Seat">Seat</string>
    <string name="F">12F</string>
    <string name="ETD">ETD</string>
    <string name="intvall">2200</string>
    <string name="Himahshi">Himahshi</string>
    <string name="OK">OK</string>
    <string name="hh">hh:</string>
    <string name="mm">mm:</string>
    <string name="ss">ss</string>
    <string name="offer">Offer</string>
    <string name="expiry">expiry</string>
    <string name="NAME">VAIBHAV MINI</string>
    <string name="many">musician, singer, songwriter</string>
    <string name="Logout">Log out</string>
    <string name="asas">Please Enter your PNR</string>
    <string name="i7jivv">i7jivv</string>
    <string name="weater">Weather</string>
    <string name="humidity">Humidity :</string>
    <string name="pressre">Presure</string>
    <string name="profile">Profile</string>
    <string name="ggg">GPS is settings</string>
    <string name="nogps">GPS is not enabled. Please Enable to Get Weather Details</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello there !!</string>
    <string name="slide_1_desc">Welcome to Silencio !</string>
    <string name="slide_2_title">Enter your Pnr</string>
    <string name="slide_2_desc">Enter your Pnr to have customized Feedback!</string>
    <string name="slide_3_title">Great Offers</string>
    <string name="slide_3_desc">Wolla..We have a customized offers for you!</string>
    <string name="slide_4_title">Explore the World of Possibility</string>
    <string name="slide_4_desc">Book your cab or View the temperature in just single App!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="Pick">Pick Yor Language</string>
    <string name="pickHindi">अपनी भाषा चुनें</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="marathi"></string>
    <string name="continuee">Continue</string>
    <string name="string">जारी रहना</string>
    <string name="ok">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="SCAN">Scan</string>
    <!--new String-->
    <string name="cabs">Cabs</string>
    <string name="Arrival">Arrival</string>
    <string name="Departure">Departure</string>
    <string name="Offers">Offers</string>
    <string name="Feedback">Feedback</string>
    <string name="airpot">Airport Name</string>

    <string name="home">Home</string>

    <string name="schemes">Schemes</string>

    <string name="health">Health</string>
    <string name="gujarati">Gujarati</string>
    <string name="startup_id">Startup Id:</string>
    <string name="startup_name">First StartUp Name</string>



</resources>
