<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logooo" />

        <com.teamshunya.silencio.Classes.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/Pick"
            android:id="@+id/pick"
            android:textSize="20sp" />

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/language"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:id="@+id/eng"
                android:text="@string/english"
                android:textSize="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hindi"
                android:id="@+id/hindi"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continuee"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/continuee"
        android:textColor="#fff" />
</RelativeLayout>