<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbars="none"
    tools:context="com.teamshunya.silencio.Activities.ShowActivity.Fragments.FeedbackActivities.FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.teamshunya.silencio.Classes.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Complain"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_airport_name"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:padding="10dp"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_complain_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:padding="10dp"
                android:textAlignment="center" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email ID"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age"
                android:inputType="number"
                android:maxLength="2" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_flightNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Flight Number"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <com.teamshunya.silencio.Classes.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroupn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtoni"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/indain"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButtonf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/Foregn"
                android:textSize="18sp" />
        </RadioGroup>

        <com.teamshunya.silencio.Classes.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visits"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroupnf"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1to7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/onetoseven"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/sevenplus"
                android:textSize="18sp" />
        </RadioGroup>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageButton2"
            android:background="@android:color/transparent"
            android:layout_alignWithParentIfMissing="true"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/doneComplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_done_white" />
    </LinearLayout>
</ScrollView>
